--- a/PhysicsProject/PhysicsProject.vcxproj
+++ b/PhysicsProject/PhysicsProject.vcxproj
@@ -154,11 +154,13 @@
     <ClCompile Include="PhysicsObject.cpp" />
     <ClCompile Include="PhysicsProject.cpp" />
     <ClCompile Include="PhysicsScene.cpp" />
+    <ClCompile Include="RigidBody.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PhysicsGame.h" />
     <ClInclude Include="PhysicsObject.h" />
     <ClInclude Include="PhysicsScene.h" />
+    <ClInclude Include="RigidBody.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
